tests/netperf/isilon_10G/udp_100/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.2 11.8 12.3 13.8 14.3 16.1 15.9 17.6 17.3 19.3 21.0 21.1 22.9 22.6 22.0 23.4 22.5 24.5 23.4 25.2 24.5 26.4 25.0 26.5 26.0 27.7 27.0 28.0 27.0 28.8 27.8 29.6 31.5 30.7 32.6 31.4 33.3 32.2 34.1 32.6 34.8 32.8 34.2 33.0 35.3 34.0 35.7 34.2 36.3 34.8 36.4
average: 26.302
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 1.0
[ipfwd] starting
current:  8.752%, error:  8.8%, probability:  1.000%
current:  11.053%, error:  2.3%, probability:  1.000%
current:  11.163%, error:  0.1%, probability:  1.000%
current:  12.268%, error:  1.1%, probability:  1.000%
current:  13.287%, error:  1.0%, probability:  1.000%
current:  15.222%, error:  1.9%, probability:  1.000%
current:  15.002%, error:  0.2%, probability:  1.000%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 7.7.7.2 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 7.7.7.2 (7.7.7.2) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.00     2128639      0    9299.72
512000           30.00     2127354           9294.11

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf             
^C
10.0 14.2 16.6 20.9 25.3 27.4 31.9 33.2 37.8 38.7 43.2 43.6 48.1 47.9 52.2 51.7 56.1 55.0 59.4 64.1 62.7 66.9 65.3 69.6 68.0 72.6 70.6 75.0 72.7 77.7 74.7 79.2 76.6 80.9 77.6 81.9 77.9 82.2 86.2 82.1 85.9 82.1 85.6 80.8 84.6 88.5 83.9 87.2 82.9 86.8 83.0 87.5 92.1 88.2 92.4 88.4 92.7
average: 65.7947
zephram-2# 


